# mc-server-info-bot

./: .env.prod  README.md  bot.py  pyproject.toml
src/plugins/ws/: __init__.py  bot.py  models.py
